Arrumando as telas funcionario

--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -231,7 +231,7 @@
 
     .editar { background: #d6b36a; color: #fff; padding: 10px 18px; border-radius: 8px; border: none; cursor: pointer; font-weight: bold; transition: 0.2s; }
 
-        .editar:hover { background: #e7c67a; }
+        .editar:hover { background: #e7c67a; color: white; }
 
     .cancelar { background: #a04444; color: #fff; padding: 10px 18px; border-radius: 8px; text-decoration: none; margin-left: 10px; transition: 0.2s; }
 
@@ -240,7 +240,7 @@
     /* Aplicação desse estilo nos botões da tabela */
     .edit-btn { background: #d6b36a; color: white; padding: 8px 16px; border-radius: 8px; text-decoration: none; font-weight: bold; transition: 0.2s; }
 
-        .edit-btn:hover { background: #e7c67a; }
+        .edit-btn:hover { background: #e7c67a; color: white; }
 
     .delete-btn { background: #a04444; color: white; padding: 8px 16px; border-radius: 8px; border: none; font-weight: bold; cursor: pointer; transition: 0.2s; }
 
@@ -249,7 +249,7 @@
     /* Botão "NOVO CLIENTE" seguindo o padrão EDITAR */
     .new-btn { background: #d6b36a; color: white; padding: 8px 18px; border-radius: 10px; text-decoration: none; font-weight: bold; font-size: 14px; transition: 0.2s; }
 
-        .new-btn:hover { background: #e7c67a; }
+        .new-btn:hover { background: #e7c67a; color: white; }
 
 
         .filters input { padding: 8px; border-radius: 6px; border: 1px solid #ccc; }
