--- a/Lustrious/Views/Cliente/CriarContaCliente.cshtml
+++ b/Lustrious/Views/Cliente/CriarContaCliente.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Lustrious.Models.Usuario
-
 @{
-    ViewData["Title"] = "Cadastrar";
+ ViewData["HideFooter"] = true;
+ ViewData["Title"] = "Cadastrar";
 }
 
 <style>
