--- a/Lustrious/Views/Cliente/EditarCliente.cshtml
+++ b/Lustrious/Views/Cliente/EditarCliente.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Lustrious.Models.Usuario
-
 @{
-    ViewData["Title"] = "Editar Cliente";
+ ViewData["HideFooter"] = true;
+ ViewData["Title"] = "Editar Cliente";
 }
 
 <style>
