--- a/Lustrious/Views/Notificacao/Index.cshtml
+++ b/Lustrious/Views/Notificacao/Index.cshtml
@@ -1,5 +1,6 @@
 @model IEnumerable<Lustrious.Models.Notificacao>
 @{
+ ViewData["HideFooter"] = true;
  ViewData["Title"] = "Notificações";
 }
 <style>
