--- a/Lustrious/Views/Shared/_Layout.cshtml
+++ b/Lustrious/Views/Shared/_Layout.cshtml
@@ -136,9 +136,12 @@
 		</main>
 	</div>
 
-
-
-
+	@{
+		var hideFooter = false;
+		try { hideFooter = ViewData["HideFooter"] != null && (bool)ViewData["HideFooter"]; } catch { hideFooter = false; }
+	}
+	@if (!hideFooter)
+	{
 	<footer class="site-footer">
 		<div class="footer-top">
 			<div class="container py-3 d-flex justify-content-between align-items-center">
@@ -165,6 +168,7 @@
 			</div>
 		</div>
 	</footer>
+	}
 	<script src="~/lib/jquery/dist/jquery.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 	<script src="~/js/site.js" asp-append-version="true"></script>
