ajustes de bugs

--- a/Lustrious/Views/Cliente/Index.cshtml
+++ b/Lustrious/Views/Cliente/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     ViewData["Title"] = "Clientes";
+    ViewData["HideFooter"] = true;
     int currentPage = ViewBag.CurrentPage ?? 1;
     int totalPages = ViewBag.TotalPages ?? 1;
     string filterQ = ViewBag.FilterQ as string ?? string.Empty;
